// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user marker 1`] = `
Array [
  Object {
    "destination": "lhq",
    "displayName": "displayName",
    "id": "usera",
    "latitude": 10,
    "locationTime": "49 years ago",
    "longitude": 10,
    "status": "available",
  },
]
`;

exports[`user marker 2`] = `
Array [
  Object {
    "destination": "lhq",
    "displayName": "displayName",
    "id": "usera",
    "latitude": 10,
    "locationTime": "49 years ago",
    "longitude": 10,
    "status": "available",
  },
  Object {
    "destination": "lhq",
    "displayName": "displayName",
    "id": "userb",
    "latitude": 20,
    "locationTime": "49 years ago",
    "longitude": 20,
    "status": "available",
  },
]
`;
